k8s/app/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: nodejs-cicd
  namespace: nodejs-app

spec:
  type: ClusterIP

  selector:
    app: nodejs-cicd

  ports:
    - name: http
      port: 80
      targetPort: 3000
      protocol: TCP
