k8s/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: nodejs-cicd-ingress
  namespace: nodejs-app

  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"

spec:
  ingressClassName: nginx

  rules:
    - http:
        paths:

          # Main Web Application
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nodejs-cicd
                port:
                  number: 80

          # Health API
          - path: /api/health
            pathType: Prefix
            backend:
              service:
                name: nodejs-cicd
                port:
                  number: 80

          # Users API
          - path: /api/users
            pathType: Prefix
            backend:
              service:
                name: nodejs-cicd
                port:
                  number: 80

          # Products API
          - path: /api/products
            pathType: Prefix
            backend:
              service:
                name: nodejs-cicd
                port:
                  number: 80

          # Application Information
          - path: /api/info
            pathType: Prefix
            backend:
              service:
                name: nodejs-cicd
                port:
                  number: 80
